--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "sonar":"sonar-scanner"
   },
   "private": true,
   "dependencies": {
@@ -22,7 +23,8 @@
     "@angular/router": "~12.2.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.4",
+    "ng-mocks": "^12.4.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.2.2",
@@ -36,6 +38,7 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
+    "karma-sonarqube-unit-reporter": "0.0.23",
     "typescript": "~4.3.5"
   }
 }
